--- a/README
+++ b/README
@@ -7,7 +7,7 @@ CONTACTS
 
 Project's homepage: http://code.google.com/p/qwit/
 For submitting issues, please, use: http://code.google.com/p/qwit/issues/
-If you want to contact author, use my email or GTalk / Jabber: artem.iglikov@gmail.com
+If you want to contact author or provide some help, use my email or GTalk / Jabber: artem.iglikov@gmail.com
 Also, some additional information can be found on my blog (mostly in Russian): http://arti.kz
 
 LICENSE
