--- a/README
+++ b/README
@@ -24,3 +24,11 @@ GNU General Public License for more details.
 
 You should have received a copy of the GNU General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>.
+
+THANKS
+
+...to Linus Torvalds, for Linux
+...to Richard Stallman, for GNU
+...to Uğur Çetin, for Turkish translation
+
+and to me, for this stuff :)
