--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 GENERAL
 
 Qwit - free cross-platform Qt-based Twitter client.
-Copyright (C) 2008 Artem Iglikov
+Copyright (C) 2008, 2009 Artem Iglikov
 
 CONTACTS
 
