--- a/INSTALL
+++ b/INSTALL
@@ -1,6 +1,6 @@
 Prerequisites
 
-You should have development version of Qt.
+You should have development version of Qt4.
 
 Compiling & Installing Qwit
 
