--- a/README
+++ b/README
@@ -30,7 +30,6 @@ THANKS
 
 ...to Linus Torvalds, for Linux
 ...to Richard Stallman, for GNU
-...to Uğur Çetin, for Turkish translation
-...to Valentin Gritsinger, Perry Ismangil and kiracatgirl for becoming project members
+...to Uğur Çetin, Valentin Gritsinger, Perry Ismangil and kiracatgirl as project members
 
 and to me, for starting this stuff :)
