--- a/README
+++ b/README
@@ -30,6 +30,7 @@ THANKS
 
 ...to Linus Torvalds, for Linux
 ...to Richard Stallman, for GNU
+...to Trolltech, for Qt
 ...to Uğur Çetin, Valentin Gritsinger, Perry Ismangil and kiracatgirl as project members
 
 and to me, for starting this stuff :)
