Added Brazilian Portuguese (pt_BR) translation by Eduardo Elias Camponez
git-svn-id: http://qwit.googlecode.com/svn/trunk@79 067a171b-6953-0410-b330-3d32600bf046

--- a/README
+++ b/README
@@ -32,6 +32,7 @@ THANKS
 ...to Richard Stallman, for GNU
 ...to Trolltech, for Qt
 ...to cgalisteo, for Spanish translation
+...to Camponez, for Brazilian Portuguese translation
 ...to Uğur Çetin, Valentin Gritsinger, Perry Ismangil and kiracatgirl as project members
 
 and to me, for starting this stuff :)
