Updated several files
git-svn-id: http://qwit.googlecode.com/svn/trunk@94 067a171b-6953-0410-b330-3d32600bf046

--- a/README
+++ b/README
@@ -34,5 +34,6 @@ THANKS
 ...to cgalisteo, for Spanish translation
 ...to Eduardo Elias Camponez, for Brazilian Portuguese translation
 ...to Uğur Çetin, Valentin Gritsinger, Perry Ismangil and kiracatgirl as project members
+...and to all people who post issues and patches
 
 and to me, for starting this stuff :)
