--- a/INSTALL
+++ b/INSTALL
@@ -4,8 +4,9 @@ You should have development version of Qt4.
 
 Compiling & Installing Qwit
 
-1. If you want to change default installation prefix (/usr/bin), put it to qwit.pro (target.path variable)
+1. If you want to change default installation prefix (/usr/local/bin), use PREFIX environment variable.
+   Note that installation directory should be in PATH environment variable
 2. run `qmake` - this will create Makefile
 3. run `make` - this will compile Qwit sources
-4. run `make install` - this will install Qwit into chosen directory
-5. to start Qwit run `qwit` from directory you have chosen for installation
+4. run `make install` - this will install Qwit into chosen directory and create a shortcut in menu
+5. to start Qwit use the shortcut in menu, or `qwit` command
