--- a/AUTHORS
+++ b/AUTHORS
@@ -1,5 +1,7 @@
-Artem Iglikov - artem.iglikov@gmail.com, http://arti.kz
+Artem Iglikov - artem.iglikov@gmail.com, http://arti.kz/
 Uğur Çetin
 kiracatgirl
-Valentin Gritsinger - http://gritsinger.com
+Valentin Gritsinger - http://gritsinger.com/
 Perry Ismangil
+Mstislav Sokolov - http://truebsd.org/sokolov/
+roop - http://blog.forwardbias.in/
