--- a/README
+++ b/README
@@ -31,9 +31,6 @@ THANKS
 ...to Linus Torvalds, for Linux
 ...to Richard Stallman, for GNU
 ...to Trolltech, for Qt
-...to cgalisteo, for Spanish translation
-...to Eduardo Elias Camponez, for Brazilian Portuguese translation
-...to Uğur Çetin, Valentin Gritsinger, Perry Ismangil and kiracatgirl as project members
-...and to all people who post issues and patches
+...to all people who post issues, submits patches and commits features
 
 and to me, for starting this stuff :)
