Language files and about dialog updated
git-svn-id: http://qwit.googlecode.com/svn/trunk@279 067a171b-6953-0410-b330-3d32600bf046

--- a/AUTHORS
+++ b/AUTHORS
@@ -4,5 +4,5 @@ Artem Iglikov - artem.iglikov@gmail.com, http://arti.kz/
 Valentin Gritsinger - http://gritsinger.com/
 Mstislav Sokolov - http://truebsd.org/sokolov/
 Roopesh Chander - http://blog.forwardbias.in/
-Thomas Salm
+Thomas Salm - http://www.devtom.de/
 kiracatgirl
