--- a/AUTHORS
+++ b/AUTHORS
@@ -6,3 +6,4 @@ Mstislav Sokolov - http://truebsd.org/sokolov/
 Roopesh Chander - http://blog.forwardbias.in/
 Thomas Salm - http://www.devtom.de/
 kiracatgirl
+And many other good people
